--- a/Nexus/Views/Home/Index.cshtml
+++ b/Nexus/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">TTTTTTTEEEEEEEESSSSSSSTTTTTT</h1>
-<h2>H22222222222222222222</h2>
+    <h1 class="display-4">Welcome to .net</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
